force-app/main/default/objects/cgcloud__Inventory__c/cgcloud__Inventory__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the inventory object.</description>
    <label>Inventory</label>
    <nameField>
        <displayFormat>I-{0000000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>