force-app/main/default/objects/cgcloud__Inventory__c/fields/cgcloud__Balance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Balance__c</fullName>
    <label>Balance</label>
    <summarizedField>cgcloud__Inventory_Transaction__c.cgcloud__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>cgcloud__Inventory_Transaction__c.cgcloud__Balance__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Inventory_Transaction__c.cgcloud__Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>