force-app/main/default/objects/cgcloud__Inventory__c/fields/cgcloud__Concat_Reference_Keys__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Concat_Reference_Keys__c</fullName>
    <description>The concatenation of various object references. This field is used to query the inventory effectively.</description>
    <externalId>true</externalId>
    <label>Concat of Reference Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>