force-app/main/default/objects/cgcloud__Inventory__c/fields/cgcloud__Initial_Inventory__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initial_Inventory__c</fullName>
    <description>Attribute that controls whether the system creates an initial transaction automatically for this inventory.</description>
    <label>Initial Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>