force-app/main/default/objects/cgcloud__Inventory__c/fields/cgcloud__Invalid__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the Inventory is valid or not</description>
    <label>Invalid</label>
    <type>Checkbox</type>
</CustomField>