force-app/main/default/objects/cgcloud__Inventory__c/fields/cgcloud__Inventory_Control_Measure__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory_Control_Measure__c</fullName>
    <formula>TEXT(cgcloud__Inventory_Template__r.cgcloud__Inventory_Control_Measure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Control Measure</label>
    <type>Text</type>
</CustomField>