force-app/main/default/objects/cgcloud__Inventory__c/fields/cgcloud__Inventory_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Inventory_Control_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Inventory_Control_Template__c</referenceTo>
    <relationshipLabel>Inventory Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>