force-app/main/default/objects/cgcloud__Inventory__c/fields/cgcloud__Quota_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Quota_Type__c</fullName>
    <formula>TEXT(cgcloud__Inventory_Template__r.cgcloud__Quota_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Type</label>
    <type>Text</type>
</CustomField>