force-app/main/default/objects/cgcloud__Inventory__c/fields/cgcloud__Vehicle__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>cgcloud__Vehicle__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>