force-app/main/default/objects/cgcloud__Inventory__c/recordTypes/cgcloud__Cash_Float.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Cash_Float</fullName>
    <active>true</active>
    <label>Cash Float</label>
</RecordType>