force-app/main/default/objects/cgcloud__Inventory__c/validationRules/cgcloud__Date_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Date_Range_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Valid_From__c &gt;  cgcloud__Valid_Thru__c</errorConditionFormula>
    <errorDisplayField>cgcloud__Valid_From__c</errorDisplayField>
    <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
</ValidationRule>