force-app/main/default/objects/cgcloud__Inventory__c/validationRules/cgcloud__Inventory_Template_Deletion_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Inventory_Template_Deletion_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(cgcloud__Inventory_Template__c), OR(ISBLANK(cgcloud__Inventory_Template__c), 
ISNULL(cgcloud__Inventory_Template__c)))</errorConditionFormula>
    <errorDisplayField>cgcloud__Inventory_Template__c</errorDisplayField>
    <errorMessage>The Inventory Template can&apos;t be empty.</errorMessage>
</ValidationRule>